<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/deploy_door_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/deploy_door"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/deploy_door_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/deploy_door_attributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/url" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/comments" />

            <CheckBox
                android:id="@+id/nsfw_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/nsfw" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deploy_signpost_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/door_url_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/door_hint_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/door_comment_input"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:inputType="text|textImeMultiLine"
                android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_deploy_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:onClick="deployDoor"
            android:text="@string/deploy" />

        <Button
            android:id="@+id/cancel_deploy_signpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelDoorSelected"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>